--- a/alpha/flaskr/templates/parametres.html
+++ b/alpha/flaskr/templates/parametres.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spirit Paramètre</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/page-parametre.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logo_E-esprit.png') }}">
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
     <script>
@@ -31,6 +32,16 @@
                 <select id="color-page" class="color-page">
                     <option value="white">☀️ Clair</option>
                     <option value="dark">🌙 Foncé</option>
+                    <option value="blueneon">💙 néon bleu</option>
+                    <option value="greenneon">💚 néon vert</option>
+                    <option value="redneon">❤️ néon rouge</option>
+                    <option value="yellowneon">💛 néon jaune</option>
+                    <option value="cyanneon">💙 néon cyan</option>
+                    <option value="pinkneon">❤️ néon rose</option>
+                    <option value="orangeneon">🧡 néon orange</option>
+                    <option value="purpleneon">💜 néon violet</option>
+                    <option value="multineon">🌈 néon arc en ciel</option>
+                    
                 </select>
             </div>
             <div class="setting-item">
