--- a/alpha/flaskr/templates/admin/admin_dashboard.html
+++ b/alpha/flaskr/templates/admin/admin_dashboard.html
@@ -57,12 +57,11 @@
                     <td>{{ user.id }}</td>
                     <td><input type="text" name="first_name" value="{{ user.first_name }}" class="form-input" required></td>
                     <td><input type="text" name="last_name" value="{{ user.last_name }}" class="form-input" required></td>
-                    <td><input type="text" name="phone" value="{{ user.phone }}" class="form-input"></td>
+                    <td><input type="tel" name="phone" value="{{ user.phone }}" class="form-input"></td>
                     <td><input type="text" name="username" value="{{ user.username }}" class="form-input" required></td>
                     <td><input type="email" name="email" value="{{ user.email }}" class="form-input" required></td>
                     <td><input type="password" name="password" value="{{ user.password }}" class="form-input" required></td>
                     <td><input type="checkbox" name="is_admin" value="True" {% if user.is_admin %}checked{% endif %}></td>
-                    
                     <td><input type="text" name="solde" value="{{ user.solde }}" class="form-input"></td>
                     <td>
                         <button type="submit" name="update" class="submit-button">Mettre à jour</button>
@@ -73,7 +72,6 @@
             {% endfor %}
         </tbody>
     </table>
-    
     <h1>Server Component Statistics</h1>
     <div>
         <canvas id="myChart" class="myChart"></canvas>
