--- a/alpha/flaskr/static/css/theme.css
+++ b/alpha/flaskr/static/css/theme.css
@@ -1155,3 +1155,14 @@ body.blueneon {
     0 0 18px rgba(0, 0, 255, 0.5),
     0 0 22px rgba(0, 0, 255, 0.5);
   }
+
+  body.bluenon .toggle{
+    box-shadow:0 0 1px #ffffff85,
+    0 0 2px #ffffff85,
+    0 0 5px #ffffff85,
+    0 0 8px rgba(0, 0, 255, 0.5),
+    0 0 11px rgba(0, 0, 255, 0.5),
+    0 0 15px rgba(0, 0, 255, 0.5),
+    0 0 18px rgba(0, 0, 255, 0.5),
+    0 0 22px rgba(0, 0, 255, 0.5);
+  }
